--- a/less/components/consonant/cards-grid.less
+++ b/less/components/consonant/cards-grid.less
@@ -50,6 +50,7 @@
             .consonant-HalfHeightCard,
             .consonant-DoubleWideCard,
             .consonant-ProductCard,
+            .consonant-TextCard,
             .consonant-FullCard {
                 max-width: @consonant-DoubleWideCard-maxWidth;
 
@@ -65,6 +66,7 @@
             .consonant-OneHalfCard,
             .consonant-HalfHeightCard,
             .consonant-ProductCard,
+            .consonant-TextCard,
             .consonant-FullCard {
                 &-inner {
                     width: @consonantCardMaxWidth;
@@ -80,6 +82,7 @@
             .consonant-OneHalfCard,
             .consonant-HalfHeightCard,
             .consonant-ProductCard,
+            .consonant-TextCard,
             .consonant-FullCard {
                 min-width: @consonant-CardsGrid-smallerCardMinWidth;
                 max-width: @consonant-CardsGrid-smallerCardMaxWidth;
@@ -113,6 +116,7 @@
             }
 
             .consonant-ProductCard,
+            .consonant-TextCard,
             .consonant-OneHalfCard {
                 height: auto;
             }
@@ -134,6 +138,7 @@
             .consonant-OneHalfCard,
             .consonant-HalfHeightCard,
             .consonant-ProductCard,
+            .consonant-TextCard,
             .consonant-FullCard {
                 min-width: @consonant-CardsGrid-smallestCardMinWidth;
                 max-width: @consonant-CardsGrid-smallestCardMaxWidth;
@@ -167,6 +172,7 @@
             }
 
             .consonant-ProductCard,
+            .consonant-TextCard,
             .consonant-OneHalfCard {
                 height: auto;
             }
