--- a/less/components/consonant/cards/double-wide.less
+++ b/less/components/consonant/cards/double-wide.less
@@ -108,6 +108,10 @@
             display: none;
         }
 
+        &.consonant-u-noBorders {
+            border: 0;
+        }
+
         @media @consonant-desktop-up {
             min-width: @consonant-DoubleWideCard-desktopMinWidth;
 
