--- a/less/components/consonant/cards/full.less
+++ b/less/components/consonant/cards/full.less
@@ -122,7 +122,7 @@
             margin: 0;
             padding-right: 24px;
 
-            .font(1.125rem, 1.375rem, 700, @consonantGray400);
+            .font(1.125rem, 1.375rem, 700, @consonantBaseColor);
 
             text-decoration: none;
             word-break: break-word;
