--- a/less/components/consonant/cards/product-card.less
+++ b/less/components/consonant/cards/product-card.less
@@ -98,6 +98,14 @@
             border: 0;
         }
 
+        &.consonant-hide-cta {
+            .consonant-ProductCard-text {
+                max-height: initial;
+                -webkit-line-clamp: 7;
+                margin: 0;
+            }
+        }
+
         @media @consonant-IE11-only {
             flex-grow: 0;
             flex-shrink: 0;
