--- a/less/components/consonant/infobits/button.less
+++ b/less/components/consonant/infobits/button.less
@@ -32,7 +32,7 @@
         }
 
         &:hover {
-            text-decoration: none;
+            text-decoration: none !important;
             border-color: @consonantGray800;
             background-color: @consonantGray800;
         }
@@ -42,7 +42,7 @@
         }
 
         &:active {
-            text-decoration: none;
+            text-decoration: none !important;
             border-color: @consonantGray900;
             background-color: @consonantGray900;
         }
@@ -62,7 +62,7 @@
             }
 
             &:hover {
-                text-decoration: none;
+                text-decoration: none !important;
                 background-color: @consonantBlue600;
                 border-color: @consonantBlue600;
             }
@@ -72,7 +72,7 @@
             }
 
             &:active {
-                text-decoration: none;
+                text-decoration: none !important;
                 background-color: @consonantBlue700;
                 border-color: @consonantBlue700;
             }
