--- a/less/components/consonant/main.less
+++ b/less/components/consonant/main.less
@@ -1,52 +1,56 @@
-@import './variables.less';
-@import './media-queries.less';
-@import './utils.less';
-@import './animations.less';
-@import './scaffolding.less';
-@import './theme.less';
-@import './rtl.less';
-@import './cards-grid.less';
-@import './wrapper.less';
-@import './filters-info.less';
-@import './search.less';
-@import './select.less';
-@import './pagination.less';
-@import './load-more.less';
-@import './loader.less';
-@import './tooltip.less';
-@import './consonant-search-result.less';
-@import './bookmarks.less';
-@import './search-ico.less';
-@import './no-results-view.less';
-@import './cards-carousel';
-@import './modal';
+@import 'variables.less';
+@import 'media-queries.less';
+@import 'utils.less';
+@import 'animations.less';
+@import 'scaffolding.less';
+@import 'theme.less';
+@import 'rtl.less';
+@import 'cards-grid.less';
+@import 'wrapper.less';
+@import 'filters-info.less';
+@import 'search.less';
+@import 'select.less';
+@import 'pagination.less';
+@import 'load-more.less';
+@import 'loader.less';
+@import 'tooltip.less';
+@import 'consonant-search-result.less';
+@import 'bookmarks.less';
+@import 'search-ico.less';
+@import 'no-results-view.less';
+@import 'cards-carousel';
+@import 'modal';
 
 /* Filters; */
-@import './filters/top/panel.less';
-@import './filters/top/item.less';
-@import './filters/left/panel.less';
-@import './filters/left/item.less';
-@import './filters/left/chosen-item.less';
+@import 'filters/top/panel.less';
+@import 'filters/top/item.less';
+@import 'filters/left/panel.less';
+@import 'filters/left/item.less';
+@import 'filters/left/chosen-item.less';
 
 /* Cards; */
-@import './cards/one-half.less';
-@import './cards/three-fourth.less';
-@import './cards/full.less';
-@import './cards/half-height.less';
-@import './cards/double-wide.less';
-@import './cards/product-card.less';
-@import './cards/link-blocker/link-blocker.less';
-@import './cards/card-footer/card-footer.less';
+@import 'cards/one-half.less';
+@import 'cards/three-fourth.less';
+@import 'cards/full.less';
+@import 'cards/half-height.less';
+@import 'cards/double-wide.less';
+@import 'cards/product-card.less';
+@import 'cards/text.less';
+@import 'cards/link-blocker/link-blocker.less';
+@import 'cards/card-footer/card-footer.less';
 
 /* Infobits; */
-@import './infobits/button.less';
-@import './infobits/price.less';
-@import './infobits/icon-with-text.less';
-@import './infobits/link-with-icon.less';
-@import './infobits/rating.less';
-@import './infobits/bookmark.less';
-@import './infobits/date.less';
-@import './infobits/progress.less';
-@import './infobits/text.less';
-@import './infobits/icon.less';
-@import './infobits/link.less';
+@import 'infobits/button.less';
+@import 'infobits/price.less';
+@import 'infobits/icon-with-text.less';
+@import 'infobits/link-with-icon.less';
+@import 'infobits/rating.less';
+@import 'infobits/bookmark.less';
+@import 'infobits/date.less';
+@import 'infobits/progress.less';
+@import 'infobits/text.less';
+@import 'infobits/icon.less';
+@import 'infobits/link.less';
+
+/* Locale overrides; */
+@import 'localeOverrides.less';
