--- a/less/components/consonant/search.less
+++ b/less/components/consonant/search.less
@@ -135,7 +135,9 @@
                 transform: rotate(-45deg);
             }
 
-            .focused;
+            &:focus {
+                border: 1px solid @consonantFocusedColor;
+            }
         }
 
         @media @consonant-desktop-up {
