--- a/less/components/consonant/cards/half-height.less
+++ b/less/components/consonant/cards/half-height.less
@@ -46,17 +46,26 @@
                     transparent
                     linear-gradient(
                         180deg,
-                        rgba(0, 0, 0, 0.1) 40%,
-                        rgba(0, 0, 0, 0.8) 95%
+                        rgba(0, 0, 0, 0.1) 10%,
+                        rgba(0, 0, 0, 0.8) 80%
                     ) 0 0% no-repeat;
                 z-index: 1;
             }
         }
 
+        &-videoButton-wrapper {
+            top: -118px;
+            background: transparent;
+            position: absolute;
+            height: 208px;
+            left: 0;
+            right: 0;
+        }
+
         &-videoIco {
             .video-button-styles;
 
-            top: -44px;
+            top: 75px;
             left: 24px;
             right: auto;
         }
