--- a/less/components/consonant/cards/one-half.less
+++ b/less/components/consonant/cards/one-half.less
@@ -57,6 +57,7 @@
             border: 1px solid transparent;
             border-top-right-radius: 4px;
             border-bottom-right-radius: 4px;
+            background-color: @consonantWhite;
             z-index: 1;
 
             .no-font;
@@ -171,6 +172,14 @@
 
         &.consonant-u-noBorders {
             border: 0;
+        }
+
+        &.consonant-hide-cta {
+            .consonant-OneHalfCard-title + p {
+                max-height: initial;
+                -webkit-line-clamp: 7;
+                margin: 0;
+            }
         }
 
         @media @consonant-IE11-only {
