--- a/less/components/consonant/wrapper.less
+++ b/less/components/consonant/wrapper.less
@@ -8,6 +8,7 @@
 
 .consonant {
     &-Wrapper {
+        font-family: adobe-clean, "Segoe UI", Roboto, sans-serif;
         position: relative;
         width: 100%;
         height: 100%;
@@ -62,12 +63,6 @@
             max-width: unset;
             margin-left: @consonant-Wrapper-horizontalMargin;
             margin-right: @consonant-Wrapper-horizontalMargin;
-        }
-
-        @media @consonant-tablet-up {
-            &-collection {
-                margin-top: -4px;
-            }
         }
 
         @media @consonant-desktop-up {
