--- a/less/components/consonant/wrapper.less
+++ b/less/components/consonant/wrapper.less
@@ -14,6 +14,7 @@
         height: 100%;
         overflow-x: hidden;
         overflow-y: auto;
+        margin-top: 1px;
 
         &-inner {
             > *:last-of-type {
