--- a/less/components/consonant/cards/half-height.less
+++ b/less/components/consonant/cards/half-height.less
@@ -62,6 +62,14 @@
             right: 0;
         }
 
+        &:focus {
+            .consonant-HalfHeightCard-videoIco {
+                transform: scale(1.1);
+                transition: transform @consonantTransitionTime @consonantTransitionFunc;
+                outline: 2px solid @consonantFocusedColor;
+            }
+        }
+
         &-videoIco {
             .video-button-styles;
 
