feat: new consonant play button styles

--- a/less/components/consonant/cards/half-height.less
+++ b/less/components/consonant/cards/half-height.less
@@ -60,6 +60,14 @@
             height: 208px;
             left: 0;
             right: 0;
+
+            &:focus {
+                .consonant-HalfHeightCard-videoIco {
+                    transform: scale(1.1);
+                    background: transparent url(@consonantCardPlayIcoHoverData) no-repeat 0 0;
+                    transition: transform @consonantTransitionTime @consonantTransitionFunc;
+                }
+            }
         }
 
         &-videoIco {
