--- a/less/components/consonant/utils.less
+++ b/less/components/consonant/utils.less
@@ -204,6 +204,7 @@
     &:hover,
     &:active {
         transform: scale(1.1);
+        background: transparent url(@consonantCardPlayIcoHoverData) no-repeat 0 0;
         transition: transform @consonantTransitionTime @consonantTransitionFunc;
     }
 
