--- a/less/components/consonant/filters/top/panel.less
+++ b/less/components/consonant/filters/top/panel.less
@@ -280,14 +280,15 @@
                 justify-content: center;
                 align-items: center;
                 min-width: calc(@consonant-SearchIco-size ~ ' + 40px');
-                min-height: 32px;
+                min-height: 24px;
 
                 & > div {
-                    position: absolute;
+                    position: relative;
                     width: @consonant-searchIcoWrapper-searchWidth;
                     top: 0;
                     right: 20px;
                     z-index: 3;
+                    margin-bottom: -20px;
                 }
 
                 &:only-child > div {
